stark-industries/k8s/manifests/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stark-industries-go-v1
  labels:
    app: stark-industries-go
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stark-industries-go
      version: v1
  template:
    metadata:
      labels:
        app: stark-industries-go
        version: v1
    spec:
      containers:
      - name: stark-industries-go
        image: dockergc00/stark-industries-go-web-app:v1
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
