stark-industries/k8s/manifests/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: stark-industries-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway  # use Istio’s ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
