stark-industries/k8s/manifests/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: stark-industries-dr
spec:
  host: stark-industries-go
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
